[package]
name = "reveal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
shaco = { git = "https://github.com/steele123/Shaco" }
futures-util = "0.3.27"
serde = "1.0.159"
serde_json = "1.0.95"
colored = "2.0.0"