[package]
name = "reveal"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread"] }
shaco = { git = "https://github.com/steele123/Shaco" }
futures-util = "0.3.27"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
colored = "2.0.0"